# psekc-benchmark

./: CMakeLists.txt  README.md
data/: dirna_properties.csv
scripts/: convert_data.py
src/: BenchmarkRunner.cpp  CPUProcessor.cpp  DataManager.cpp  DatasetGenerator.cpp  GPUProcessor.cu  OMPProcessor.cpp  PseKNCProcessor.cpp  ReportGenerator.cpp  main.cpp
src/include/: BenchmarkRunner.h  CPUProcessor.h  DataManager.h  DatasetGenerator.h  GPUProcessor.h  OMPProcessor.h  PseKNCProcessor.h  ReportGenerator.h
